WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256968
(REGRESSION)[IFC] Incorrect content clipping when list marker is present
https://bugs.webkit.org/show_bug.cgi?id=256968
Summary
(REGRESSION)[IFC] Incorrect content clipping when list marker is present
zalan
Reported
2023-05-18 09:00:59 PDT
Created
attachment 466402
[details]
Test case see attached test case.
Attachments
Test case
(233 bytes, text/html)
2023-05-18 09:00 PDT
,
zalan
no flags
Details
Patch
(6.95 KB, patch)
2023-05-18 11:02 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
Patch
(7.72 KB, patch)
2023-05-18 12:57 PDT
,
zalan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(15.93 KB, patch)
2023-05-18 16:32 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(15.32 KB, patch)
2023-05-18 20:17 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-18 09:01:28 PDT
<
rdar://problem/109515997
>
zalan
Comment 2
2023-05-18 11:02:10 PDT
Created
attachment 466405
[details]
Patch
zalan
Comment 3
2023-05-18 12:57:27 PDT
Created
attachment 466408
[details]
Patch
zalan
Comment 4
2023-05-18 16:32:10 PDT
Created
attachment 466410
[details]
Patch
zalan
Comment 5
2023-05-18 20:17:37 PDT
Created
attachment 466411
[details]
[fast-cq]Patch
EWS
Comment 6
2023-05-19 05:56:32 PDT
Committed
264248@main
(e449e98c37d8): <
https://commits.webkit.org/264248@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 466411
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug