(REGRESSION)[IFC] Incorrect content clipping when list marker is present https://bugs.webkit.org/show_bug.cgi?id=256968 <rdar://problem/109515997>

Reviewed by Antti Koivisto.

Both Chrome and Firefox consider the position _after_ the list marker as a soft wrap opportunity and they also make the line contentful in line-breaking sense -but not for floats etc.

* LayoutTests/fast/inline/incorrect-content-clip-when-list-marker-is-present-expected.html: Added.
* LayoutTests/fast/inline/incorrect-content-clip-when-list-marker-is-present.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLine.h:
(WebCore::Layout::Line::hasContent const):
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::isAtSoftWrapOpportunity):

Canonical link: https://commits.webkit.org/264248@main