Source/WebCore/layout/formattingContexts/inline/InlineLine.h
@@ -47,6 +47,7 @@ public:
     void append(const InlineItem&, const RenderStyle&, InlineLayoutUnit logicalWidth);
 
     bool hasContent() const;
+    bool hasContentOrListMarker() const;
 
     bool contentNeedsBidiReordering() const { return m_hasNonDefaultBidiLevelRun; }
 
@@ -79,7 +80,8 @@ public:
             SoftLineBreak,
             WordBreakOpportunity,
             GenericInlineLevelBox,
-            ListMarker,
+            ListMarkerInside,
+            ListMarkerOutside,
             InlineBoxStart,
             InlineBoxEnd,
             LineSpanningInlineBoxStart
@@ -89,7 +91,9 @@ public:
         bool isNonBreakingSpace() const { return m_type == Type::NonBreakingSpace; }
         bool isWordSeparator() const { return m_type == Type::WordSeparator; }
         bool isBox() const { return m_type == Type::GenericInlineLevelBox; }
-        bool isListMarker() const { return m_type == Type::ListMarker; }
+        bool isListMarker() const { return isListMarkerInside() || isListMarkerOutside(); }
+        bool isListMarkerInside() const { return m_type == Type::ListMarkerInside; }
+        bool isListMarkerOutside() const { return m_type == Type::ListMarkerOutside; }
         bool isLineBreak() const { return isHardLineBreak() || isSoftLineBreak(); }
         bool isSoftLineBreak() const  { return m_type == Type::SoftLineBreak; }
         bool isHardLineBreak() const { return m_type == Type::HardLineBreak; }
@@ -272,6 +276,15 @@ private:
     bool m_isFirstFormattedLine { false };
     Vector<InlineLayoutUnit> m_inlineBoxLogicalLeftStack;
 };
+
+inline bool Line::hasContentOrListMarker() const
+{
+    if (m_runs.isEmpty())
+        return false;
+    if (m_runs.first().isListMarkerInside())
+        return true;
+    return Line::hasContent();
+}
 
 inline bool Line::hasContent() const
 {
